# XihongJewelryMP

./: .dockerignore  .env.template  .gitignore  .gitmodules  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json
deploy/ar_h5/: Dockerfile  nginx.conf
deploy/nginx/conf.d/: default.conf
scripts/: kill-dev-ports.mjs
src/ar_h5/: Dockerfile  package.json
src/ar_h5/public/models/: bracelet-2.glb
src/ar_h5/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/ar_h5/src/components/: ARStage.tsx  CalibrationPanel.tsx  CapturePreview.tsx  FaceModeControl.tsx  ProductRail.tsx  StatusIndicator.tsx  TryOnApp.tsx
src/ar_h5/src/data/: products.ts
src/ar_h5/src/lib/: arRenderer.ts  armBoundary.ts  cameraSwitch.ts  eighthWallRuntime.ts  geometry.ts  handSemantics.ts  handTracker.ts  handTracker.worker.ts  modelFace.ts  projection.ts  skinSegmenter.ts  skinSegmenter.worker.ts  trackingPresentation.ts
src/ar_h5/src/types/: ar.ts  eighthWall.ts
src/backend/: .env.example  Dockerfile  package.json  pyproject.toml
src/backend/app/: __init__.py  admin.py  auth.py  database.py  main.py  models.py  schemas.py  security.py  services.py  settings.py
src/backend/tests/: test_api.py
src/backstage/: Dockerfile  package.json
src/backstage/app/: globals.scss  layout.tsx  page.tsx
src/backstage/public/mediapipe-ar/: index.html
src/miniprogram/: package.json  project.config.json  tsconfig.json
src/miniprogram/config/: index.ts
src/miniprogram/src/: app.config.ts  app.scss  global.d.ts
(+27 files in other folders)
